# quartzdb

./: .gitignore  Cargo.toml  DESIGN.md  README.md
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/src/cli/: handlers.rs  mod.rs  utils.rs
cli/src/common/: config.rs  document.rs  index.rs  mod.rs  models.rs  processors.rs  schema.rs
cli/src/indexer/: client.rs  commands.rs  config.rs  doc_processor.rs  mod.rs  service.rs  web.rs
cli/src/ingest/: client.rs  commands.rs  doc_processor.rs  service.rs  web.rs
cli/src/metastore/: client.rs  events.rs  local.rs  mod.rs  service.rs  web.rs
cli/src/storage/: batch_processor.rs  client.rs  mod.rs  service.rs  split.rs  storage_impl.rs
cli/src/storer/: batch_processor.rs  client.rs  commands.rs  config.rs  mod.rs  service.rs  storage_impl.rs
cli/src/storer/split/: data_writer.rs  mod.rs  split.rs  split_writter.rs  writter.rs
cli/src/storer/split/columm_store/: mod.rs  writer.rs
cli/src/storer/split/index_store/: fast_field_collector.rs  mod.rs  packed_directory.rs  packed_file.rs  reader.rs  writer.rs
configs/: index-config.yaml  quartz.yml  quartzdb.yaml
configs/old/: index-config.yaml  index-config2.yaml
data/: logs.toml  metrics.toml
docs/architecture/: DIAGRAMS.md  QUICK_REFERENCE.md  README.md
docs/dev/: README.md
docs/old_members/ingest/src/protocols/: mod.rs
docs/old_members/metastore/src/: error.rs  lib.rs  local.rs
docs/old_members/quartz-common/: Cargo.toml
docs/old_members/quartz-common/src/: index.rs
docs/old_members/quartz-common/src/old/: ingestion.rs  log.rs  time_series.rs
docs/old_members/quartz-index/: README.md
docs/old_members/quartz-index/src/: error.rs  fast_field_collector.rs  filters.rs  lib.rs
docs/old_members/quartz-index/src/automaton/: levenshtein.rs  mod.rs  str.rs
docs/old_members/quartz-index/src/old/: query.rs
docs/old_members/quartz-log-store/: Cargo.toml
docs/old_members/quartz-log-store/src/: reader.rs  segment.rs
docs/old_members/select/: Cargo.toml
docs/old_members/storage/src/engine/: catalog.rs  mod.rs  segment_list.rs
docs/old_members/storage/src/engine/segment/: data.rs
docs/user/: README.md
examples/: distributed_execution.rs
log-store/: Cargo.toml  README.md
logsql-parser/: Cargo.toml  README.md
proto/: Cargo.toml  build.rs
proto/protobuf/: quartzdb.proto  storage.proto
proto/src/: lib.rs  quartzdb.rs
proto/src/protobuf/: mod.rs  quartzdb.rs
quartz-cli/: Cargo.toml  build.rs
quartz-cli/src/: cli.rs  lib.rs  main.rs
quartz-cli/src/cli/: handlers.rs  mod.rs  utils.rs
quartz-cli/src/common/: config.rs  document.rs  index.rs  mod.rs  models.rs  schema.rs
quartz-cli/src/ingest/: client.rs  commands.rs  config.rs  doc_processor.rs  mod.rs  service.rs  web.rs
quartz-cli/src/metastore/: client.rs  config.rs  local.rs  mod.rs  postgres.rs  service.rs  web.rs
quartz-common/: Cargo.toml  build.rs
quartz-common/src/: build_info.rs  colors.rs  data_block.rs  lib.rs  time_series.rs
quartz-common/src/old/: utils.rs
quartz-config/: Cargo.toml  README.md
quartz-config/src/: lib.rs
quartz-data-model/: Cargo.toml
quartz-data-model/src/: lib.rs
quartz-index/: Cargo.toml
quartz-index/src/: error.rs  postings.rs  query.rs
quartz-index/src/old/: core.rs  fts_index.rs  inverted_index.rs  lib.rs
quartz-insert/: Cargo.toml
quartz-insert/src/: lib.rs
quartz-log-store/src/: block.rs  lib.rs  store.rs  writer.rs
quartz-metastore/: Cargo.toml
quartz-select/: Cargo.toml
quartz-select/src/: lib.rs
quartz-select/src/old/: encoding.rs  ingester.rs  int_mapping.rs  series_info.rs
quartz-storage/: Cargo.toml
quartz-storage/src/: lib.rs
quartz-storage/src/engine/: block_cache.rs  mod.rs  system_catalog.rs
quartz-storage/src/engine/segment/: builder.rs  mod.rs
quartz-ts-store/: Cargo.toml
quartz-tsdb/: Cargo.toml
quartz-tsdb/src/: database.rs  lib.rs  term_dict.rs
storage/: Cargo.toml
storage/src/: cachable_storage.rs  error.rs  lib.rs  local_storage.rs  object_storage.rs  remote_storage.rs
tests/: README.md
tests/data/: logs-index-config.yaml  sample-logs.ndjson  server-metrics.ndjson
