[workspace]
resolver = "2"

members = [
    "quartz-cli",
    # "quartz-insert",
    # "log-store",
    # "quartz-common",
    # "quartz-data-model",
    # "quartz-index",
    
    # "quartz-log-store",
    # "quartz-select",
    # "quartz-storage",
    # "quartz-metastore",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
homepage = "https://quartzdb.github.io/"
documentation = "https://quartzdb.github.io/docs/"
repository = "https://github.com/evanxg852000/quartzdb"
authors = ["Evance Soumaoro, <evanxg852000@gmail.com>"]
license = "AGPL-3.0"

[workspace.dependencies]
redb = "4.0.0"
hashbrown = "0.17.0"
axum = { version = "0.8.9", features = ["macros"] }
crossbeam = "0.8"
integer-encoding = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_norway = "0.9"
tantivy = "0.22.0"
rmp = "0.8"
rmp-serde = "1.3"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
lz4 = "1.24.0"
lz4_flex = "0.9.0"
snap = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bson = "3.1.0"
config = { version = "0.15.22", features = ["yaml"] }
reqwest = { version = "0.13.2", features = ["json"] }
url = { version = "2.5.8", features = ["serde"] }
object_store = { version = "0.13.2", features = ["fs", "aws", "gcp", "azure"] }
bloomfilter = "3.0.1"

# quartz-insert = { path = "quartz-insert" }
# quartz-common ={ path = "quartz-common" }
# quartz-index ={ path = "quartz-index" }
