[workspace]
resolver = "3"

members = [
    "cli",
    "proto",
    "storage",

    # "metastore",
    # "indexer",
    # "searcher",
    # "storer",
]

exclude = ["df-example"]

[workspace.package]
version = "0.0.1"
edition = "2024"
homepage = "https://quartzdb.github.io/"
documentation = "https://quartzdb.github.io/docs/"
repository = "https://github.com/evanxg852000/quartzdb"
authors = ["Evance Soumaoro, <evanxg852000@gmail.com>"]
license = "AGPL-3.0"

[workspace.dependencies]
redb = "4.0"
hashbrown = "0.17"
async-trait = "0.1.89"
axum = { version = "0.8", features = ["macros"] }
crossbeam = "0.8"
integer-encoding = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
json_dotpath = "1.1"
serde_norway = "0.9"
rmp = "0.8"
rmp-serde = "1.3"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
futures = "0.3"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
chrono = { version = "0.4", features = ["serde"] }
jiff = "0.2"
uuid = { version = "1.0", features = ["serde", "v7"] }
lz4 = "1.24.0"
lz4_flex = "0.9"
snap = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bson = "3.1.0"
config = { version = "0.15", features = ["yaml"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
url = { version = "2.5", features = ["serde"] }
object_store = { version = "0.13", features = ["fs", "aws", "gcp", "azure"] }
bloomfilter = "3.0"
datafusion = "53.1"
tantivy = "0.26"
lance = "4.0"
lance-datafusion = "4.0"
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"
tonic-reflection = "0.12"
tonic-build = "0.12"
prost-build = "0.13"
iceberg = "0.9.0"
tempfile = "3.10"
bytes = "1.11.1"

proto = { path = "proto" }
storage = { path = "storage" }


# quartz-insert = { path = "quartz-insert" }
# quartz-common ={ path = "quartz-common" }
# quartz-index ={ path = "quartz-index" }
