[package]
name = "quartz-cli"
description = "QuartzDB binary"

version.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tantivy = "0.22.0"
serde_json = "1.0.140"
serde = {version = "1.0.140", features = ["derive"]}
rmp = "0.8"
rmp-serde = "1.3"
tokio = { version = "1.0", features = ["full"] }
