[package]
name = "quartz-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = { workspace = true }
time = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
num_cpus = { workspace = true }


[build-dependencies]
time = { workspace = true }

[dev-dependencies]
time = { workspace = true }
