[package]
name = "quartz-insert"
description = "ingestion node"

version.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum = {workspace = true}
anyhow = {workspace = true}
