[package]
name = "quartz-storage"
description = "Storage node"

version.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hashbrown = "0.15"
memmap2 = "0.9"
ulid = "1.1"
serde = "1.0"
serde_json = "1.0"
lru = "0.13"
parking_lot = "0.12"
bincode = "2.0"
fast-float = "0.2"

quartz-common = { workspace = true}
quartz-index = { workspace = true}
