[package]
name = "quartz-common"
description = "common code for quartzdb"

version.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
polars = { version = "0.46.0", features = ["simd", "parquet"] }
bincode = "2.0"
