[package]
name = "quartz-log-store"
description = "A log store engine"

version.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = {version = "1.0.140", features = ["derive"]}
serde_json = "1.0.140"
serde_bytes = "0.11.5"
rmp = "0.8"
rmp-serde = "1.3"
bincode = "2.0.1"
roaring = "0.10.10"


hashbrown = "0.15.2"
memmap2 = "0.9.5"
thiserror = "2.0.12"
bytes = { version = "1", features = ["serde"] }
# uuid = { version = "1.6.1", features = ["v4"] }
ulid = "1.1.0"
crossbeam = "0.8.2"
smallvec = "1.11.2"
zstd = "0.13.0"
oneshot = "0.1.6"
byteorder = "1.5.0"
sorted-vec = "0.8.6"
lz4_flex = "0.11.3"
derivative = "2.2.0"


[dev-dependencies]
tempdir = "0.3.7"
